# OneAgent-SDK-Python-AutoInstrumentation

./: azure-templates.yaml  pyproject.toml  setup.py  tox.ini
autodynatrace/: __init__.py
autodynatrace/wrappers/django/: apps.py
autodynatrace/wrappers/django_outbox_pattern/: consumer.py  publisher.py
autodynatrace/wrappers/django_stomp/: consumer.py  publisher.py
