[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autodynatrace"
version = "1.1.2"
description = "Auto instrumentation for the OneAgent SDK"
readme = "README.md"
license = ""
authors = ["Juntos Somos Mais <labs@juntossomosmais.com.br>"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Monitoring",
]

[tool.poetry.dependencies]
python = "^3.6"
autowrapt = "^1.0.0"
oneagent-sdk = "^1.3.0"
six = "^1.10.0"
wrapt = "^1.11.2"

[project.entry-points.autodynatrace]
string = "autodynatrace:load"

[project.urls]
Homepage = "https://github.com/juntossomosmais/OneAgent-SDK-Python-AutoInstrumentation"
"Issue Tracker" = "https://github.com/juntossomosmais/OneAgent-SDK-Python-AutoInstrumentation/issues"


